Added prompts in nested array + checkbox functionality, added css design

--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
         <button class="go-button">Go!</button>
       </div>
       <p>
-        <span class="prompt-1">test</span> <span class="prompt-2">test</span>
-        <span class="prompt-3">test</span> <span class="prompt-4">test</span>
-        <span class="prompt-5">test</span>
+        <span class="prompt-1"></span>
+        <span class="prompt-2"></span>
+        <span class="prompt-3"></span>
+        <span class="prompt-4"></span>
+        <span class="prompt-5"></span>
       </p>
     </div>
     <script src="index.js"></script>
