--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"
+    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="HandheldFriendly" content="true" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -14,47 +20,48 @@
     <title>Art Prompter</title>
   </head>
   <body>
-    <div class="app-wrapp">
-      <h1>Art Prompter v0.1</h1>
-      <div class="form-check form-check-inline">
-        <input
-          class="form-check-input"
-          type="radio"
-          name="inlineRadioOptions"
-          id="inlineRadio1"
-          value="option1"
-        />
-        <label class="form-check-label" for="inlineRadio1">1 Prompt</label>
+    <div class="body-wrapp">
+      <div class="app-wrapp">
+        <h1>Art Prompter v0.1</h1>
+        <div class="form-check form-check-inline">
+          <input
+            class="form-check-input"
+            type="radio"
+            name="inlineRadioOptions"
+            id="inlineRadio1"
+            value="1"
+          />
+          <label class="form-check-label" for="inlineRadio1">1 Prompt</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input
+            class="form-check-input"
+            type="radio"
+            name="inlineRadioOptions"
+            id="inlineRadio2"
+            value="3"
+          />
+          <label class="form-check-label" for="inlineRadio2">3 Prompts</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input
+            class="form-check-input"
+            type="radio"
+            name="inlineRadioOptions"
+            id="inlineRadio3"
+            value="5"
+          />
+          <label class="form-check-label" for="inlineRadio3">5 Prompts</label>
+          <button id="go-button" class="go-button">Let's Go!</button>
+        </div>
+        <p id="prompts-host"></p>
       </div>
-      <div class="form-check form-check-inline">
-        <input
-          class="form-check-input"
-          type="radio"
-          name="inlineRadioOptions"
-          id="inlineRadio2"
-          value="option2"
-        />
-        <label class="form-check-label" for="inlineRadio2">3 Prompts</label>
-      </div>
-      <div class="form-check form-check-inline">
-        <input
-          class="form-check-input"
-          type="radio"
-          name="inlineRadioOptions"
-          id="inlineRadio3"
-          value="option3"
-        />
-        <label class="form-check-label" for="inlineRadio3">5 Prompts</label>
-        <button class="go-button">Go!</button>
-      </div>
-      <p>
-        <span class="prompt-1"></span>
-        <span class="prompt-2"></span>
-        <span class="prompt-3"></span>
-        <span class="prompt-4"></span>
-        <span class="prompt-5"></span>
-      </p>
+      <span class="footer"
+        >made with 💜 by
+        <a href="https://github.com/gmgercke" target="_blank">gmgercke</a> and
+        <a href="https://github.com/mtfarkas" target="_blank">mtfarkas</a></span
+      >
     </div>
-    <script src="index.js"></script>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
