--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
     />
     <link rel="stylesheet" href="styles.css" />
     <title>Art Prompter</title>
+    <meta property="og:title" content="Art Prompter" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://hungry-swanson-d067cb.netlify.app/"
+    />
+    <meta property="og:image" content="artprompter.png" />
+    <meta
+      property="og:description"
+      content="Generate random drawing prompts for inspiration and practice"
+    />
   </head>
   <body>
     <div class="body-wrapp">
