--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
       property="og:url"
       content="https://hungry-swanson-d067cb.netlify.app/"
     />
-    <meta property="og:image" content="artprompter.png" />
+    <meta
+      property="og:image"
+      content="https://hungry-swanson-d067cb.netlify.app/artprompter.png"
+    />
     <meta
       property="og:description"
       content="Generate random drawing prompts for inspiration and practice"
