Added ko-fi link

--- a/index.html
+++ b/index.html
@@ -73,8 +73,14 @@
       <span class="footer"
         >made with 💜 by
         <a href="https://github.com/gmgercke" target="_blank">gmgercke</a> and
-        <a href="https://github.com/mtfarkas" target="_blank">mtfarkas</a></span
-      >
+        <a href="https://github.com/mtfarkas" target="_blank">mtfarkas</a>
+        <div>
+          <br />
+          <img src="Ko-fi_Icon_RGB_stroke.png" alt="kofi logo" width="5%" />
+          want to support me? Check out
+          <a href="https://ko-fi.com/dorxel" target="_blank">Ko-fi</a>!
+        </div>
+      </span>
     </div>
     <script src="index.js" type="module"></script>
   </body>
