--- a/index.html
+++ b/index.html
@@ -70,17 +70,20 @@
         </div>
         <p id="prompts-host"></p>
       </div>
-      <span class="footer"
-        >made with 💜 by
-        <a href="https://github.com/gmgercke" target="_blank">gmgercke</a> and
-        <a href="https://github.com/mtfarkas" target="_blank">mtfarkas</a>
-        <div>
-          <br />
-          <img src="Ko-fi_Icon_RGB_stroke.png" alt="kofi logo" width="5%" />
+      <footer>
+        <span class="credits">
+          made with 💜 by
+          <a href="https://github.com/gmgercke" target="_blank">gmgercke</a> and
+          <a href="https://github.com/mtfarkas" target="_blank"
+            >mtfarkas</a
+          ></span
+        >
+        <span class="support"
+          ><img src="Ko-fi_Icon_RGB_stroke.png" alt="kofi logo" />
           want to support me? Check out
           <a href="https://ko-fi.com/dorxel" target="_blank">Ko-fi</a>!
-        </div>
-      </span>
+        </span>
+      </footer>
     </div>
     <script src="index.js" type="module"></script>
   </body>
