Added favicon + some various prompts

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       property="og:description"
       content="Generate random drawing prompts for inspiration and practice"
     />
+    <link rel="icon" type="image/png" href="icon.png" />
   </head>
   <body>
     <div class="body-wrapp">
